fixed items page layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,57 +1,90 @@
 body {
-  font-family: 'splendid_66regular';
-  background-color:black;
-  width:100%;
+    font-family: 'splendid_66regular';
+    background-color: black;
+    width: 100%;
 }
 
-html {
-  width:100%;
-}
-
-.bjb-header{
-  padding-top:1.5rem;
+.bjb-header {
+    padding-top: 1.5rem;
 }
 
 .blockSpace4 {
-  padding-bottom: 4rem;
+    padding-bottom: 4rem;
 }
 
-.card  {
-  text-decoration: none;
-  background-color: #4b4b4b;
+.breadcrumb-item,
+.breadcrumb-item li,
+.breadcrumb-item a {
+    color: coral;
 }
 
-.full-width {
-  padding: 0;
+.card {
+    text-decoration: none;
+    background-color: #4b4b4b;
 }
 
-.logoHeader, .logoHeader a {
-  text-decoration: none;
-  color:white;
-  font-size: 50px;
-  font-weight:500;
+* {
+    box-sizing: border-box;
+}
+
+
+.carousel {
+    background: #FAFAFA;
+    margin-bottom: 40px;
+}
+
+.carousel-cell {
+    width: 100%;
+    height: 200px;
+    margin-right: 10px;
+    background: #8C8;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+}
+/* cell number */
+.carousel-cell:before {
+    display: block;
+    text-align: center;
+    content: counter(carousel-cell);
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+}
+.carousel-nav .carousel-cell {
+    height: 80px;
+    width: 100px;
+}
+.carousel-nav .carousel-cell:before {
+    font-size: 50px;
+    line-height: 80px;
+}
+
+.carousel-nav .carousel-cell.is-nav-selected {}
+
+.logoHeader,
+.logoHeader a {
+    text-decoration: none;
+    color: white;
+    font-size: 50px;
+    font-weight: 500;
 }
 
 .price {
-  font-weight: bold;
-  font-size: x-large;
+    font-weight: bold;
+    font-size: x-large;
 }
 
 .menu {
-  font-size:1.6rem;
-  text-decoration: none;
+    font-size: 1.6rem;
+    text-decoration: none;
 }
 
-.navbar {
-  /* border-bottom: 1px solid lightgrey; */
-
-}
 
 .caption {
-  position: absolute;
-  top: 45%;
-  left: 0;
-  width: 100%;
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
 }
 
 /* .topSection
@@ -64,22 +97,15 @@ html {
   margin-bottom: 10px;
 } */
 
-.cart-profile {
-	min-width: 696px;
-	list-style: none;
-	padding-top: 20px;
-}
-
-.cart-profile li {
-	display: inline;
-}
-
-
 .imageFloat {
-  padding:2rem; 
-  margin-top:-3rem;
-  background-image:url(/images/emily_transparent2.png);
-  background-repeat: no-repeat;
-  background-position:80% 18%;  /* adjust to fit your design and the image */
-  background-size:22rem;
+    padding: 2rem;
+    margin-top: -3rem;
+    background-image: url('/images/emily_transparent2.png');
+    background-repeat: no-repeat;
+    background-position: 80% 18%; /* adjust to fit your design and the image */
+    background-size: 22rem;
+}
+
+.sectionHeader {
+    font-size: xx-large;
 }
